pruefungsunterlagen/counter_kand/frontend/counter-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-frontend
  template:
    metadata:
      labels:
        app: counter-frontend
    spec:
      containers:
        - name: counter-frontend
          image: ghcr.io/isaaclins/counter-frontend:v1
          imagePullPolicy: Always
