pruefungsunterlagen/counter_kand/frontend/counter-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: counter-frontend
spec:
  selector:
    app: counter-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
