pruefungsunterlagen/counter_kand/frontend/counter-frontend-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: counter-frontend
spec:
  to:
    kind: Service
    name: counter-frontend
    weight: 100
  port:
    targetPort: 80
